# bsg.github.io

./: Cargo.toml  README.md  bsgapp-1f873f7b29257bfd.js  bsgapp-2b0010f6af5b09c9.js  bsgapp-2b0010f6af5b09c9_bg.wasm  bsgapp-467d0e4a77207b9a.js  bsgapp-467d0e4a77207b9a_bg.wasm  index.htm  index.html  params.json  serve.sh  sw.js
.github/workflows/: pages.yml  rust.yml
src/: app.rs  lib.rs  main.rs
src/app/: github.rs
src/app/window/: whoami.rs
