[package]
name = "bsgapp"
version = "0.1.0"
authors = ["Cem Saldırım <cem.saldirim@gmail.com>"]
edition = "2021"
rust-version = "1.67"


[dependencies]
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
log = "0.4"
reqwest = { version = "0.11.20", features = ["json"] }
image = "0.24.7"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0.188", features=["derive"] }
serde_json = "1.0.105"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2